estruturação e inicio da base do projeto
Inclusão da tela inicial e implementação do gradle

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.Shopper" parent="Theme.AppCompat.Light.NoActionBar"/>
 
-    <style name="Theme.Shopper" parent="android:Theme.Material.Light.NoActionBar" />
+
 </resources>
